# churn-compass

./: .env.docker  .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup.sh
docker/: api.Dockerfile  frontend.Dockerfile
frontend/: README.md  TODO.md  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/lib/: csvParser.ts
notebooks/: BankCustomerChurn.ipynb  Internal_analytics.ipynb
scripts/: create_sample_data.py
src/churn_compass/: __init__.py
src/churn_compass/api/: __init__.py  main.py  schemas.py
src/churn_compass/config/: __init__.py  identifier_gen.py  run_id.py  settings.py
src/churn_compass/features/: __init__.py  feature_engineering_pipeline.py
src/churn_compass/io/: __init__.py  db.py  file_io.py
src/churn_compass/logging/: __init__.py  logger.py
src/churn_compass/modeling/: __init__.py  metrics.py  train.py  tune_optuna.py
src/churn_compass/monitoring/: __init__.py  alerts.py  drift_detector.py  monitoring_flow.py
src/churn_compass/orchestration/: __init__.py  retraining_flow.py  (+1 more)
tests/api/: test_api_schemas.py
tests/config/: test_settings.py
tests/features/: test_feature_engineering.py
tests/io/: test_file_io.py
tests/modeling/: test_metrics.py
tests/monitoring/: test_alerts.py
tests/serving/: test_predictor.py
tests/utils/: test_normalization.py
tests/validation/: test_checks.py  test_leakage.py  test_schemas.py
(+23 files in other folders)
