[project]
name = "churn-compass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Interstellar01-glitch", email = "kannanjayachandran88@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
churn-compass = "churn_compass:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
