[project]
name = "churn-compass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Interstellar01-glitch", email = "kannanjayachandran88@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "fastapi>=0.123.5",
    "mlflow>=3.6.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pandera[pandas]>=0.27.0",
    "prefect>=3.6.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.2",
]

[project.scripts]
churn-compass = "churn_compass:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "ruff>=0.14.8",
    "sdv>=1.30.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]
